--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Exo4 Responsive & Bootstrap</title>
 </head>
 
 <body>
-
-
-
-
-
-
+    <div class="contener">
+        <article>
+            <figure>
+                <img src="img/01.jpg" alt="Image 1">
+                <figcaption>
+                    <h1>Card Title</h1>
+                </figcaption><i class="fas fa-ellipsis-v"></i>
+                <a href="index.html">This is a link</a>
+            </figure>
+        </article>
+        <article>
+            <img src="img/02.jpg" alt="Image 2">
+        </article>
+        <article>
+            <img src="img/03.jpg" alt="Image 3">
+        </article>
+        <article>
+            <img src="img/04.jpg" alt="Image 4">
+        </article>
+        <article>
+            <img src="img/05.jpg" alt="Image 5">
+        </article>
+        <article>
+            <img src="img/06.jpg" alt="Image 6">
+        </article>
+    </div>
 </body>
 
 </html>
