--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                 <img src="img/01.jpg" alt="Image 1">
                 <figcaption>
                     <h1>Card Title</h1>
-                </figcaption><i class="fas fa-ellipsis-v"></i>
+                </figcaption>
+                <ul>
+                    <li>
+                        <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                    </li>
+                </ul>
                 <a href="index.html">This is a link</a>
             </figure>
         </article>
