--- a/index.html
+++ b/index.html
@@ -12,21 +12,11 @@
 </head>
 
 <body>
-<<<<<<< HEAD
     <article>
         <figure>
             <img src="img/01.jpg" alt="Image 1">
             <figcaption>
                 <h1>Card Title</h1>
-=======
-    <div class="contener">
-        <article>
-            <figure>
-                <img src="img/01.jpg" alt="Image 1">
-                <figcaption>
-                    <h1>Card Title</h1>
-                </figcaption>
->>>>>>> 5f9fa90e4812c747aaca3f60239501c5da91dc41
                 <ul>
                     <li>
                         <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
@@ -37,7 +27,22 @@
         </figure>
     </article>
     <article>
-        <img src="img/02.jpg" alt="Image 2">
+        <figure>
+            <img src="img/02.jpg" alt="Image 2">
+            <figcaption>
+                <div class="card-title">
+                    <h1>Card Title</h1>
+                    <ul>
+                        <li>
+                            <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a id="link" href="index.html">This is a link</a>
+                </div>
+            </figcaption>
+        </figure>
     </article>
     <article>
         <img src="img/03.jpg" alt="Image 3">
