--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
         <figure>
             <img src="img/01.jpg" alt="Image 1">
             <figcaption>
-                <h1>Card Title</h1>
-                <ul>
-                    <li>
-                        <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
-                    </li>
-                </ul>
-                <a href="index.html">This is a link</a>
+                <div class="card-title">
+                    <h1>Card Title</h1>
+                    <ul>
+                        <li>
+                            <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a id="link" href="index.html">This is a link</a>
+                </div>
             </figcaption>
         </figure>
     </article>
@@ -45,16 +49,76 @@
         </figure>
     </article>
     <article>
-        <img src="img/03.jpg" alt="Image 3">
+        <figure>
+            <img src="img/03.jpg" alt="Image 3">
+            <figcaption>
+                <div class="card-title">
+                    <h1>Card Title</h1>
+                    <ul>
+                        <li>
+                            <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a id="link" href="index.html">This is a link</a>
+                </div>
+            </figcaption>
+        </figure>
     </article>
     <article>
-        <img src="img/04.jpg" alt="Image 4">
+        <figure>
+            <img src="img/04.jpg" alt="Image 4">
+            <figcaption>
+                <div class="card-title">
+                    <h1>Card Title</h1>
+                    <ul>
+                        <li>
+                            <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a id="link" href="index.html">This is a link</a>
+                </div>
+            </figcaption>
+        </figure>
     </article>
     <article>
-        <img src="img/05.jpg" alt="Image 5">
+        <figure>
+            <img src="img/05.jpg" alt="Image 5">
+            <figcaption>
+                <div class="card-title">
+                    <h1>Card Title</h1>
+                    <ul>
+                        <li>
+                            <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a id="link" href="index.html">This is a link</a>
+                </div>
+            </figcaption>
+        </figure>
     </article>
     <article>
-        <img src="img/06.jpg" alt="Image 6">
+        <figure>
+            <img src="img/06.jpg" alt="Image 6">
+            <figcaption>
+                <div class="card-title">
+                    <h1>Card Title</h1>
+                    <ul>
+                        <li>
+                            <a href="index.html " target="_self "><i class="fas fa-ellipsis-v"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a id="link" href="index.html">This is a link</a>
+                </div>
+            </figcaption>
+        </figure>
     </article>
 </body>
 
