--- a/test-bootstrap.html
+++ b/test-bootstrap.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/print.css" media="print">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <title>Exo 4 avec Bootstrap</title>
+    <title>Test Bootstrap</title>
 </head>
 
 <body>
